--- a/modules/enhance/package.json
+++ b/modules/enhance/package.json
@@ -2,36 +2,9 @@
   "name": "enhance-app",
   "version": "0.0.1",
   "scripts": {
-    "build": "npm install",
-    "start": "npx enhance dev",
-    "lint": "eslint ./app/**/*.mjs --fix",
-    "enhance": "enhance"
-  },
-  "devDependencies": {
-    "@enhance/cli": "latest",
-    "@enhance/types": "^0.6.1",
-    "eslint": "^8.49.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "node": true
-    },
-    "extends": "eslint:recommended",
-    "rules": {
-      "indent": [
-        "error",
-        2
-      ]
-    },
-    "ignorePatterns": [],
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 2022
-    }
+    "build": "npm install"
   },
   "dependencies": {
-    "@enhance/arc-plugin-enhance": "^9.4.11",
-    "@enhance/arc-plugin-styles": "^5.0.5",
-    "@enhance/styles-cribsheet": "^0.0.11"
+    "@enhance/arc-plugin-enhance": "^9.4.11"
   }
 }
